infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: comments-depl 
spec: 
  replicas: 1 #jumlah pod yang mau dibikin (nanti tiap pod isi containerny sama)
  selector: 
    matchLabels: 
      app: comments #key-value pair
  template: 
    metadata: 
      labels:
        app: comments #key-value pair (untuk ngasih label ke tiap container yang nak dimasukin ke pod)
    spec: 
      containers: #list contianer yang mau dimasukkan ke 1 pod (yg nanti bisa di buat replika)
        - name: comments 
          image: fadhilaf/comments-test # belakangny dk usah dispecify versi apo, biar tiap kali kito restart deployemntny, dio bakal otomatis pake versi terbaru dari docker hub dan docker image ny harus pake tag :latest (kalo ck ini "fadhilaf/comments-test:0.0.2" dio dk otomatis). tapi kato chatgpt avoid using :latest, meskipun dk otomatis lebih mending spesifik
---
apiVersion: v1 #untuk config khusus object service clustIP nyo pod comments
kind: Service 
metadata: 
  name: comments-clusterip-srv 
spec: 
  selector: 
    app: comments 
  type: ClusterIP #config object service itu tipe default nyo clusterIP (jadi boleh dk ditulis) 
  ports: 
    - name: comments 
      protocol: TCP 
      port: 4001 #port clusterip service ny
      targetPort: 4001 #port yg dipake oleh app
