infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: event-bus-depl 
spec: 
  replicas: 1 #jumlah pod yang mau dibikin (nanti tiap pod isi containerny sama)
  selector:
    matchLabels: 
      app: event-bus #key-value pair
  template: 
    metadata: 
      labels:
        app: event-bus #key-value pair (untuk ngasih label ke tiap container yang nak dimasukin ke pod)
    spec: 
      containers: #list contianer yang mau dimasukkan ke 1 pod (yg nanti bisa di buat replika)
        - name: event-bus 
          image: fadhilaf/event-bus-test # belakangny dk usah dispecify versi apo, biar tiap kali kito restart deployemntny, dio bakal otomatis pake versi terbaru dari docker hub dan docker image ny harus pake tag :latest (kalo ck ini "fadhilaf/posts-test:0.0.2" dio dk otomatis). tapi kato chatgpt avoid using :latest, meskipun dk otomatis lebih mending spesifik
---
apiVersion: v1 #untuk config khusus object service clustIP nyo pod event-bus
kind: Service 
metadata: 
  name: event-bus-srv 
spec: 
  selector: 
    app: event-bus 
  type: ClusterIP #config object service itu tipe default nyo clusterIP (jadi boleh dk ditulis) 
  ports: 
    - name: event-bus 
      protocol: TCP 
      port: 4005 #port clusterip service ny
      targetPort: 4005 #port yg dipake oleh app
